RESOLVED FIXED49148
[GTK] Error page templates are not filled properly
https://bugs.webkit.org/show_bug.cgi?id=49148
Summary [GTK] Error page templates are not filled properly
Martin Robinson
Reported 2010-11-07 15:25:38 PST
A recent switch from String::format to makeString r69850, mistakenly broke some legitmate formatting behavior. This patch tracking switching back to String::format.
Attachments
Fix for this issue (1.61 KB, patch)
2010-11-07 15:37 PST, Martin Robinson
no flags
Martin Robinson
Comment 1 2010-11-07 15:37:44 PST
Created attachment 73200 [details] Fix for this issue
Andreas Kling
Comment 2 2010-11-07 17:01:21 PST
Comment on attachment 73200 [details] Fix for this issue LGTM.
Martin Robinson
Comment 3 2010-11-08 08:48:20 PST
Comment on attachment 73200 [details] Fix for this issue Clearing flags on attachment: 73200 Committed r71529: <http://trac.webkit.org/changeset/71529>
Martin Robinson
Comment 4 2010-11-08 08:48:26 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.