2010-11-08  Martin Robinson  <mrobinson@igalia.com>

Reviewed by Andreas Kling.

        [GTK] Error page templates are not filled properly
        https://bugs.webkit.org/show_bug.cgi?id=49148

        Replace a call to makeString with String::format. This was mistakenly
        changed to makeString in an earlier commit.

        * WebCoreSupport/FrameLoaderClientGtk.cpp:
        (WebKit::FrameLoaderClient::dispatchDidFailLoad):

Canonical link: https://commits.webkit.org/62016@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@71529 268f45cc-cd09-0410-ab3c-d52691b4dbfc