WebKit/gtk/WebCoreSupport/FrameLoaderClientGtk.cpp
@@ -1139,7 +1139,7 @@ void FrameLoaderClient::dispatchDidFailLoad(const ResourceError& error)
         if (!loaded)
             content = makeString("<html><body>", webError->message, "</body></html>");
         else
-            content = makeString(fileContent, error.failingURL(), webError->message);
+            content = String::format(fileContent, error.failingURL().utf8().data(), webError->message);
     }
 
     webkit_web_frame_load_alternate_string(m_frame, content.utf8().data(), 0, error.failingURL().utf8().data());
